--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
+    "@types/validator": "^13.15.0",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "dotenv": "^16.5.0",
@@ -30,7 +32,6 @@
     "express": "^5.1.0",
     "jwt": "^0.2.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.0",
     "validator": "^13.15.0"
   }
 }
