--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "@types/validator": "^13.15.0",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
@@ -30,7 +31,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^5.1.0",
-    "jwt": "^0.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "validator": "^13.15.0"
   }
