--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "@types/validator": "^13.15.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "dotenv": "^16.5.0",
@@ -26,7 +27,8 @@
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "winston": "^3.17.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
