--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "packageManager": "pnpm@9.12.3",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
@@ -37,7 +38,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
+    "multer": "^2.0.2",
     "redis": "^5.1.0",
+    "sharp": "^0.34.3",
     "validator": "^13.15.0"
   }
 }
