--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "@types/validator": "^13.15.0",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "dotenv": "^16.5.0",
@@ -36,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "multer": "^2.0.2",
