--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.3",
     "@types/validator": "^13.15.0",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
