--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
-  "name": "course-api",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "packageManager": "pnpm@9.12.3",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^22.15.3",
-    "@types/validator": "^13.15.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "dotenv": "^16.5.0",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
-    "typescript": "^5.8.3",
-    "winston": "^3.17.0"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0",
-    "multer": "^2.0.2",
-    "redis": "^5.1.0",
-    "sharp": "^0.34.3",
-    "validator": "^13.15.0"
-  }
+    "name": "course-api",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "nodemon src/index.ts",
+        "build": "pnpm exec tsc",
+        "start": "node dist/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "packageManager": "pnpm@9.12.3",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.18",
+        "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/multer": "^2.0.0",
+        "@types/node": "^22.15.3",
+        "@types/validator": "^13.15.0",
+        "@typescript-eslint/eslint-plugin": "^8.31.0",
+        "@typescript-eslint/parser": "^8.31.0",
+        "eslint": "^9.25.1",
+        "eslint-config-prettier": "^10.1.2",
+        "eslint-plugin-prettier": "^5.2.6",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.5.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^5.1.0",
+        "express-rate-limit": "^8.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.16.0",
+        "multer": "^2.0.2",
+        "redis": "^5.1.0",
+        "sharp": "^0.34.3",
+        "validator": "^13.15.0",
+        "winston": "^3.19.0"
+    }
 }
