--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "express": "^5.1.0",
         "express-rate-limit": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
+        "mathjs": "^15.1.0",
         "mongodb": "^6.16.0",
         "multer": "^2.0.2",
         "redis": "^5.1.0",
