feat: add factories for course and user operations, including create, delete, get, and update functionalities, and update tsconfig to include factories directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
         // "experimentalDecorators": true,
         // "emitDecoratorMetadata": true
     },
-    "include": ["src/**/*"], // Arquivos a serem incluídos
+    "include": ["src/**/*", "factories"], // Arquivos a serem incluídos
     "exclude": [
         // Arquivos a serem ignorados
         "node_modules",
